--- a/gradle.properties
+++ b/gradle.properties
@@ -17,9 +17,10 @@ MIN_SDK=21
 TARGET_SDK=26
 BUILD_TOOLS=26.0.1
 
-KAU=4d3d570
-KOTLIN=1.1.3-2
+KAU=20f9648
+KOTLIN=1.1.4
 
+COMMONS_TEXT=1.1
 CRASHLYTICS=2.6.8
 DBFLOW=4.0.5
 IAB=1.0.44
@@ -38,5 +39,9 @@ RX_KOTLIN=2.1.0
 RX_NETWORK=0.11.0
 SCALE_IMAGE_VIEW=3.6.0
 SLIDING_PANEL=3.3.1
+
+JUNIT=4.12
+TEST_RULE=0.5
+TEST_RUNNER=1.0.0
 
 android.enableAapt2=false
